layout bug fixes

--- a/wp-content/themes/drivewyze/assets/styles/blocks/_device.scss
+++ b/wp-content/themes/drivewyze/assets/styles/blocks/_device.scss
@@ -149,6 +149,7 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+      justify-content: center;
 
       @media (min-width: $bp-M) {
         width: 100%;
@@ -158,6 +159,7 @@
 
       span {
         margin-right: 14px;
+        white-space: nowrap;
       }
 
       img {
@@ -234,6 +236,18 @@
         padding-right: 40px;
         padding-left: 15px;
       }
+    }
+  }
+
+  &-block-swiper {
+    width: 100%;
+
+    @media (min-width: $bp-M) {
+      width: calc(100% - 350px);
+    }
+
+    @media (min-width: $bp-2XL) {
+      width: calc(100% - 400px);
     }
   }
 }
